Fix JUnit version

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.language>java</sonar.language>
+		<sonar.java.libraries>target/classes</sonar.java.libraries>
 	</properties>
 	<dependencies>
 		<dependency>
