--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.language>java</sonar.language>
+		<sonar.coverage.exclusions>*controllers*</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
