--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create-drop
 server.servlet.context-path=/api
