--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.h2.console.enabled=true
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create-drop
 server.servlet.context-path=/api
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
