--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 				<version>1.6.0</version>
 				<executions>
 					<execution>
-						<id>integration-tests</id>
+						<id>integration-tests-author</id>
 						<phase>integration-test</phase>
 						<goals>
 							<goal>exec</goal>
@@ -130,6 +130,21 @@
 							</executable>
 							<commandlineArgs>
 								run collections/AuthorTests.postman_collection.json -e collections/EntornoIT.postman_environment.json
+							</commandlineArgs>
+						</configuration>
+					</execution>
+					<execution>
+						<id>integration-tests-boojs</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>
+								newman
+							</executable>
+							<commandlineArgs>
+								run collections/BookTests.postman_collection.json -e collections/EntornoIT.postman_environment.json
 							</commandlineArgs>
 						</configuration>
 					</execution>
