--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
 								newman
 							</executable>
 							<commandlineArgs>
-								run composed.collection.json -e collections/EntornoIT.postman_environment.json
+								run it/composed.collection.json -e collections/EntornoIT.postman_environment.json
 							</commandlineArgs>
 						</configuration>
 					</execution>
