--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.datasource.url=jdbc:h2:mem:bookstore
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.jackson.serialization.fail-on-self-references = false
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = create-drop
-server.servlet.context-path=/api
-spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto = update 
+spring.jpa.open-in-view = true
+spring.sql.init.mode = always
+
+#Development
+spring.datasource.url = jdbc:postgresql://localhost:5432/bookstore
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+
+spring.sql.init.platform = postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
