--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>co.edu.uniandes.dse.bookstore</groupId>
-	<artifactId>bookstore</artifactId>
+	<artifactId>bookstore-back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bookstore</name>
 	<description>Back project for ISIS2603</description>
